mudanca no index para colocar o total que esta feito

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <section class="items" id="items-container"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
+        <section class="total-price"></section>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items" id="cart__items"></ol>
       </section>
