--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
   <body>
     <section class="container">
-      <section class="items"></section>
+      <section class="items">
+        <p class="loading">Carregando produtos ...</p>
+      </section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
+        <span>Preço total: R$ <span class="total-price">0</span></span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
       </section>
