--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
 </head>
-
-<body>
-  <section class="container">
-    <section class="items"></section>
-    <section class="cart">
-      <span class="cart__title">Carrinho de compras</span>
-      <ol class="cart__items"></ol>
+  <body>
+    <section class="container">
+      <section class="items"></section>
+      <section class="cart">
+        <span class="cart__title">Carrinho de compras</span>
+        <button class="empty-cart">Esvaziar carrinho</button>
+        <ol class="cart__items"></ol>
+      </section>
     </section>
-    <div>
-      <button class="empty-cart">Limpa carrinho</button>
-    </div>
   </section>
 </body>
-
 </html>
