--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <header>
+      <h1 class="title">Super Shop Cart</h1>
+      <label for="search">Coloque sua pesquisa aqui!!<br>
+        <input type="text" id="search" name="search"></label>
+    </header>
     <section class="container">
       <section class="items" id="items-container"></section>
       <section class="cart">
