adicionada a função soma

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="cart">
       <span class="cart__title">Carrinho de compras</span>
       <ol class="cart__items"></ol>
-      <p class="total-price">R$00,00</p>
+      <p class="total-price">00</p>
       <button class="empty-cart">Esvaziar Carinho</button>
 
     </section>
