--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   </head>
 
   <body>
+    <div class="loading"><p>Loading...</p></div>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <p>Preço total: <span class="total-price"></span></p>
       </section>
     </section>
   </body>
