--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   </head>
 
   <body>
-    <div class="loading">Loading...</div>
     <section class="container">
-      <section class="items"></section>
+      <section class="items">
+        <p class="loading">Loading...</p>
+      </section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
