--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="container">
       <section class="items">
-        <p class="loading">Loading...</p>
+        <p class="loading">loading</p>
       </section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
