--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <section class="container">
       <section class="items">
-        <section class="loading"></section>
+        <section class="loading">
+          loading...
+        </section>
       </section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
