--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
 
   <body>
     <section class="container">
-      <section class="items"></section>
+      <section class="items">
+        <section class="loading">
+          loading...
+        </section>
+      </section>
       <section class="cart">
-        <span class="cart__title">Carrinho de compras</span>
+        <span class="cart__title">SEUS PEDIDOS</span>
+        <div class="total-carrinho">
+         <div class="preco">
+          <strong>Total: </strong>
+          <h1 class="total-price"></h1>
+         </div>
+          <button class="empty-cart">Esvaziar carrinho</button>
+        </div>
         <ol class="cart__items"></ol>
       </section>
     </section>
