--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
         </section>
       </section>
       <section class="cart">
-        <span class="cart__title">SEUS PEDIDOS</span>
-        <div class="total-carrinho">
-          <div class="preco">
-            <strong>Total: </strong>
-            <h1 class="total-price"></h1>
-          </div>
-          <button class="empty-cart">Esvaziar carrinho</button>
-        </div>
+        <span class="cart__title">Carrinho de compras</span>
+        <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <h1 class="total-price"></h1>
       </section>
     </section>
   </body>
