animacao de cortina

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/bb1bbe7f03.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </head>
 
@@ -21,8 +22,24 @@
         <span class="cart__title">Carrinho de compras</span>
         <section class="total-price"></section>
         <button class="empty-cart">Esvaziar carrinho</button>
-        <ol class="cart__items" id="cart__items"></ol>
+        <section class="tease-container">
+          <div class="arrow-container">
+            <div class="arrow-content">
+              <i class="fas fa-caret-down"></i>
+            </div>
+            <ol class="cart__items" id="cart__items"></ol>
+          </div>
+        </section>
       </section>
     </section>
+    <footer>
+      <section>
+        <p>Made By Gustavo Figueiredo</p>
+      </section>
+      <section class="Licenses">
+        <h3>Licenses</h3>
+        <a href="https://fontawesome.com/license">Font Awesome</a>
+      </section>
+    </footer>
   </body>
 </html>
