--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Carrinho de compras bada bararadahdah</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
@@ -14,8 +14,9 @@
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <button class="empty-cart" onclick="emptyCart()">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <h3 class="total-price">Total: R$ 0,00</h3>
       </section>
     </section>
   </body>
