melhoria no css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
   </head>
 
   <body>
+    <div class="top-bar">
+      <img src="images/logo.png" width="150px" class="logo">
+    </div>
+    <section class="loading-area"></section>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
+        <div class = "fixed">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        </div>
       </section>
     </section>
     <script src="script.js"></script>
