--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 
   <body>
     <section class="container">
-      <section class="items"></section>
       <section class="cart">
+        <img class="logo" src="LogoML.png" alt="Logotipo do MercadoLivre">
+        <div class="search">
+          <input type="text" name="textSearch" id="input-search">
+          <button onclick="runSearch()">Pesquisar</button>
+        </div>
         <span class="cart__title">Carrinho de compras</span>
-        <button class="empty-cart" onclick="emptyCart()">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
         <h3 class="total-price">Total: R$ 0,00</h3>
+        <button class="empty-cart" onclick="emptyCart()">Esvaziar carrinho</button>
       </section>
+      <section class="items"></section>
     </section>
   </body>
 </html>
