Adicionando text Loading

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +11,8 @@
   </head>
 
   <body>
+    <p class="loading" style="margin: auto;position: relative;padding: 0;text-align: center;right: 190px;">loading...
+    </p>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
@@ -20,4 +23,5 @@
       </section>
     </section>
   </body>
+
 </html>
