--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   </head>
 
   <body>
-    <p class="loading" style="margin: auto;position: relative;padding: 0;text-align: center;right: 190px;">loading...
-    </p>
+    <p class="loading">loading...</p>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
