--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="logo" src="LogoML.png" alt="Logotipo do MercadoLivre">
         <div class="search">
           <input type="text" name="textSearch" id="input-search">
-          <button onclick="runSearch()">Pesquisar</button>
+          <button class="search-btn" onclick="buscaProdutos()">Pesquisar</button>
         </div>
         <span class="cart__title">Carrinho de compras</span>
         <ol class="cart__items"></ol>
