Mudança de ordem e nomenclatura nas funções

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <section class="container">
       <section class="cart">
         <img class="logo" src="LogoML.png" alt="Logotipo do MercadoLivre">
+        <h3>Faça sua busca</h3>
         <div class="search">
           <input type="text" name="textSearch" id="input-search">
-          <button class="search-btn" onclick="buscaProdutos()">Pesquisar</button>
+          <button class="search-btn" onclick="getProducts()">Pesquisar</button>
         </div>
         <span class="cart__title">Carrinho de compras</span>
         <ol class="cart__items"></ol>
