--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
         <div>
-          <p id="total-price"></p>
+          <p id="total-price" class="total-price"></p>
         </div>
       </section>
     </section>
