Testando com o termo 'Computador'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="logo" src="LogoML.png" alt="Logotipo do MercadoLivre">
         <h3>Faça sua busca</h3>
         <div class="search">
-          <input type="text" name="textSearch" id="input-search">
+          <input type="text" name="textSearch" id="input-search" placeholder="Ex.: computador">
           <button class="search-btn" onclick="getProducts()">Pesquisar</button>
         </div>
         <span class="cart__title">Carrinho de compras</span>
