--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
-        <p>Preço total: <span class="total-price"></span></p>
+        <p>Preço total: $<span class="total-price"></span></p>
       </section>
     </section>
   </body>
