Starting project and doing first requirement

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
         <ol class="cart__items"></ol>
       </section>
     </section>
+    <section class="results">
+      <p>Hello</p>
+    </section>
   </body>
 </html>
