--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="empty-cart">Esvaziar carrinho</button>
       <ol class="cart__items"></ol>
       <div>
-        <p id="loading" class="loading"></p>
+        <p id="loading" class="loading">loading</p>
         <p class="total-price">00</p>
       </div>
     </section>
