--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
-        <section class="total"><p>Valor total do carrinho:</p></section>
+        <section class="total"></section>
       </section>
     </section>
   </body>
