--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ol class="cart__items"></ol>
       <div>
         <p id="loading" class="loading"></p>
-        <p class="total-price">00</p>
+        <p id="total-price" class="total-price"></p>
       </div>
     </section>
   </section>
