--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <section class="container">
     <section class="items"></section>
     <section class="cart">
-      <span class="total-price">Total price:
-        <p>0.00</p>
-      </span>
+      <span class="total-price"></span>
       <span class="cart__title">Carrinho de compras</span>
       <button class="empty-cart">Esvaziar carrinho</button>
       <ol class="cart__items"></ol>
