Loading page status

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <section class="container">
     <section class="items"></section>
     <section class="cart">
+      <p class="loading">Loading, please wait.</p>
       <span class="total-price"></span>
       <span class="cart__title">Carrinho de compras</span>
       <button class="empty-cart">Esvaziar carrinho</button>
