--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <span class="cart__title">Carrinho de compras</span>
         <ol class="cart__items"></ol>
-        <h3 class="total-price">Total: R$ 0,00</h3>
+        <h3>Total dos produtos: R$ <span class="total-price">0</span></h3>
         <button class="empty-cart" onclick="emptyCart()">Esvaziar carrinho</button>
       </section>
       <section class="items"></section>
