--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Carrinho de compras</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
     <script src="script.js"></script>
   </head>
 
   <body>
     <section class="container">
-      <section class="items"></section>
-      <section class="cart">
+      <div class="columns">
+      <section class="items column col-9"></section>
+      <section class="cart column col-2">
         <span class="cart__title">Carrinho de compras</span>
         <span class="cart__total"></span>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <button class="empty-cart btn btn-primary btn-sm">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
       </section>
+      </div>
     </section>
   </body>
 
