correçao do arquivo style.css para adequação ao code climate e alterações no index html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
   </head>
 
   <body>
+    <header class="text-center text-uppercase">
+      <h1>Bazar de Bagdá</h1>
+    </header>
     <section class="container">
       <div class="columns">
         <section class="items column col-9"></section>
         <section class="cart column col-2">
-          <span class="cart__title">Carrinho de compras</span>
+          <span class="cart__title text-primary text-uppercase bg-secondary">Carrinho de compras</span>
           <span class="cart__total"></span>
-          <button class="empty-cart btn btn-primary btn-sm">Esvaziar carrinho</button>
-          <ol class="cart__items"></ol>
+          <footer class="p-centered">
+            <button class="empty-cart btn btn-primary btn-lg">Esvaziar carrinho</button>
+            </footer>
+          <ol class="cart__items c-hand"></ol>
         </section>
       </div>
     </section>
