--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <span class="cart__title">Carrinho de compras</span>
       <button class="empty-cart" id="empty-cart">Esvaziar carrinho</button>
       <ol class="cart__items"></ol>
+      <div>
+        <p class="loading"></p>
+      </div>
     </section>
   </section>
 </body>
