--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="container">
       <section class="items"></section>
-      <p class="loading">Loading</p>
+      <!-- <p class="loading">Loading</p> -->
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
-        <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <button class="empty-cart">Esvaziar carrinho</button>
         <span>Preço total: R$ <span class="total-price"> 0 </span></span>
       </section>
     </section>
