--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <section class="container">
       <section class="items"></section>
-      <!-- <p class="loading">Loading</p> -->
+      <p class="loading">Loading</p>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
-        <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
+        <ol class="cart__items"></ol>
         <span>Preço total: R$ <span class="total-price"> 0 </span></span>
       </section>
     </section>
