--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="items column col-9"></section>
         <section class="cart column col-2">
           <span class="cart__title text-primary text-uppercase bg-secondary">Carrinho de compras</span>
-          <span class="cart__total"></span>
+          <span class="cart__total text-secondary text-uppercase bg-secondary"></span>
           <footer class="p-centered">
             <button class="empty-cart btn btn-primary btn-lg">Esvaziar carrinho</button>
             </footer>
