implementado css da seção valor total de itens

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
         <section class="items column col-9"></section>
         <section class="cart column col-2">
           <span class="cart__title text-primary text-uppercase bg-secondary">Carrinho de compras</span>
-          <span class="cart__total text-secondary text-uppercase bg-secondary"></span>
-          <footer class="p-centered">
+          <div class="p-centered">
             <button class="empty-cart btn btn-primary btn-lg">Esvaziar carrinho</button>
-            </footer>
+          </div>
+          <section class="cart__total__container">
+            <p class="cart__subtitle">Valor Total R$
+              <span class="cart__total text-primary bg-secondary"></span>
+            </p>
+          </section>
           <ol class="cart__items c-hand"></ol>
         </section>
       </div>
