--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button class="empty-cart">Esvaziar carrinho</button>
         <span class="total"></span>
         <span class="cart__item"></span>
+        <span class="loading"></span>
         <ol class="cart__items"></ol>
       </section>
     </section>
