--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Carrinho de Compra</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
@@ -21,7 +21,7 @@
       <section class="cart">
         <span class="cart__title">Carrinho de compras </span>
         <button class="empty-cart">Esvaziar carrinho</button>
-        <span class="total"></span>
+        <p>Total $<span class="total"></span></p>
         <span class="cart__item"></span>
         <span class= "loading" class= "sr-only">Loading...</span>
         <ol class="cart__items"></ol>
