Correcao da class total-price

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="cart">
         <span class="cart__title">Carrinho de compras </span>
         <button class="empty-cart">Esvaziar carrinho</button>
-        <p>Total $<span class="total"></span></p>
+        <p>Total $<span class="total-price"></span></p>
         <span class="cart__item"></span>
         <span class= "loading" class= "sr-only">Loading...</span>
         <ol class="cart__items"></ol>
