--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
-        <p class= "total_value"></p>
+        <span class="loading">Loading...</span>
+        <p>Total $<span class= "total_value"></span></p>
         <ol class="cart__items"></ol>
       </section>
     </section>
