Deixando soma do total mais eficiente, adicionando loading no carrinho e estlizando loading

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section class="cart">
         <span class="cart__title">SEU PEDIDO</span>
         <ol class="cart__items"></ol>
-        <p class="total-prc">Total: $<span class="total-price"></span></p>
+        <p class="total-prc">Total: R$<span class="total-price"></span></p>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
