alterações na ordem dos elementos

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <section class="items column col-9"></section>
         <section class="cart column col-2">
           <span class="cart__title text-primary text-uppercase bg-secondary">Carrinho de compras</span>
-          <div class="p-centered">
-            <button class="empty-cart btn btn-primary btn-lg">Esvaziar carrinho</button>
-          </div>
           <section class="cart__total__container">
-            <p class="cart__subtitle">Valor Total R$
+            <p class="cart__subtitle text-primary bg-secondary">Valor Total R$
               <span class="cart__total text-primary bg-secondary"></span>
             </p>
+            <div class="p-centered">
+              <button class="empty-cart btn btn-primary btn-lg">Esvaziar carrinho</button>
+            </div>
           </section>
           <ol class="cart__items c-hand"></ol>
         </section>
