--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <span class="cart__title text-primary text-uppercase bg-secondary">Carrinho de compras</span>
           <section class="cart__total__container">
             <p class="cart__subtitle text-primary bg-secondary">Valor Total R$
-              <span class="cart__total text-primary bg-secondary"></span>
+              <span class="cart__total total-price text-primary bg-secondary"></span>
             </p>
             <div class="p-centered">
               <button class="empty-cart btn btn-primary btn-lg">Esvaziar carrinho</button>
