--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <span class="loading ">loading...</span>
-        <p>Total $<span class= "total_price"></span></p>
+        <p>Total $<span class= "total-price"></span></p>
         <ol class="cart__items"></ol>
       </section>
     </section>
