--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <section class="items"></section>
       <p class="loading">Loading</p>
       <section class="cart">
-        <span class="cart__title">Carrinho de compras</span>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <span class="cart__title">Shopping Cart</span>
         <ol class="cart__items"></ol>
-        <span>Preço total: R$ <span class="total-price"> 0 </span></span>
+        <button class="empty-cart">Empty Cart</button>
+        <span>Total Price: R$ <span class="total-price"> 0 </span></span>
       </section>
     </section>
     <script src="script.js"></script>
