--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
+        <p class="henrique">Desenvolvido por <a class="linkedin" href="https://www.linkedin.com/in/henrique-ba%C3%AAta-leite-785a4b15a/" target="_blank">Henrique Baêta Leite</a></p>
         <p>Total $<span class="total-price"></span></p>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
