--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar Carrinho</button>
         <span class="loading"></span>
+        <p>Total dos Produtos:R$<span class="total-price"></span></p>
         <ol class="cart__items"></ol>
       </section>
     </section>
