--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="loading">Loading...</div>
+    <h1><div class="loading">Loading...</div></h1>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
