--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Mercadão</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
   <script src="script.js"></script>
 </head>
 
@@ -19,13 +18,13 @@
   <div class="columns">
     <section class="items column col-9"></section>
     <section class="cart column col-2">
-      <span class="cart__title text-primary text-uppercase bg-secondary">Carrinho de compras</span>
+      <span class="cart__title text-primary text-uppercase bg-secondary">Shopping cart:</span>
       <section class="cart__total__container">
-        <p class="cart__subtitle text-primary bg-secondary">Valor Total R$
-          <span class="total-price text-primary bg-secondary"></span>
+        <p class="cart__subtitle">Total: R$
+          <span class="total-price"></span>
         </p>
         <div class="p-centered">
-          <button class="empty-cart btn btn-primary btn-lg">Esvaziar carrinho</button>
+          <button class="empty-cart">Clean list</button>
         </div>
       </section>
       <ol class="cart__items c-hand"></ol>
