--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
   </head>
 
   <body>
+    <section>
+      <label>Search:</label>
+      <input class='search' placeholder="Type Here">
+    </section>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <p>Preço total: $<span class="total-price">0</span></p>
       </section>
     </section>
     <section class="results">
