--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <label>Search:</label>
       <input class='search' placeholder="Type Here">
     </section>
+    <p class="loading">Loading...</p>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
