--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
   <body>
     <body>
+      <div class="loading">Loading...</div>
       <section class="container">
         <section class="items"></section>
         <section class="cart">
           <span class="cart__title">Carrinho de compras</span>
+          <div style="height: 300px; width: 400px; border: black 2px solid; overflow:auto;">  
+            <ol class="cart__items"></ol>
+          </div>
           <button class="empty-cart">Esvaziar carrinho</button>
-          <ol class="cart__items"></ol>
+          <h3 class="total-price"> 0</h3>
       </section>
     </section>
   </body>
