--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
-        <div style="height: 300px; width: 400px; border: black 2px solid; overflow:auto;">
+        <div style="height: 300px;
+         width: 400px;
+          border: black 2px solid;
+           overflow:auto;">
           <ol class="cart__items"></ol>
         </div>
         <button class="empty-cart">Esvaziar carrinho</button>
