--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,14 +11,11 @@
 
   <body>
     <section class="container">
-      <section class="items">
-        <section class="loading">
-          loading...
-        </section>
-      </section>
+      <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
+        <p class="total-price">00</p>
         <ol class="cart__items"></ol>
         <h1 class="total-price"></h1>
       </section>
