--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar Carrinho</button>
-        <span class="loading"></span>
+        <span class="loading" class="sr-only">Loading...</span>
         <p>Total dos Produtos:R$<span class="total-price"></span></p>
         <ol class="cart__items"></ol>
       </section>
