--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
   </head>
 
   <body>
     <section class="container">
       <section class="items"></section>
+      <section class="loading">
+        loading...
+      </section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <h1 class="total-price"></h1>
       </section>
     </section>
   </body>
