--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
+        <button class="empty-cart">Esvaziar carrinho</button>
+        <span class="cart__title">Carrinho de compras</span>
         <ol class="cart__items"></ol>
+         <p>Preço total: $<span class="total-price"></span></p>
       </section>
     </section>
   </body>
