adicionando mensagem loading durante carregamento da api

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <ol class="cart__items"></ol>
       </section>
     </section>
+    <div class="load"><h1>Loading...</h1></div>
   </body>
 </html>
