Projeto Carrinho de Compras

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <H1>Carrinho de Compras</H1>
       </section>
     </header>
+    <div class="alert alert-primary" role="alert">
+      Desenvolvido por <a href="https://www.linkedin.com/in/diego-rafael-26bb7819b" class="alert-link">Diego Rafael</a>
+    </div>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
