--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <section class="container">
       <section class="items">
-        <div class="loading"></div>
+        <div class="loading">
+          <p>Loading</p>
+        </div>
       </section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
