--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <body>
     <section class="container">
       <section class="items">
-        <div class="loading">
-          <p>Loading</p>
-        </div>
+        <p class="loading"><br>Loading</p>
       </section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
