--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <h1><section class="loading">Loading...</section></h1>
   <section class="container">
     <section class="items"></section>
     <section class="cart">
